--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -57,7 +57,7 @@ import com.android.build.OutputFile
  * ]
  */
 
-//apply from: "react.gradle"
+apply from: "react.gradle"
 
 /**
  * Set this to true to create two separate APKs instead of one:
