--- a/ios/TH_CFD.xcodeproj/xcshareddata/xcschemes/TH_CFD.xcscheme
+++ b/ios/TH_CFD.xcodeproj/xcshareddata/xcschemes/TH_CFD.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "EatProject.app"
-               BlueprintName = "EatProject"
-               ReferencedContainer = "container:EatProject.xcodeproj">
+               BuildableName = "TH_CFD.app"
+               BlueprintName = "TH_CFD"
+               ReferencedContainer = "container:TH_CFD.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -29,27 +29,27 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "EatProjectTests.xctest"
-               BlueprintName = "EatProjectTests"
-               ReferencedContainer = "container:EatProject.xcodeproj">
+               BuildableName = "TH_CFD.xctest"
+               BlueprintName = "TH_CFDTests"
+               ReferencedContainer = "container:TH_CFD.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      buildConfiguration = "Debug">
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "EatProjectTests.xctest"
-               BlueprintName = "EatProjectTests"
-               ReferencedContainer = "container:EatProject.xcodeproj">
+               BuildableName = "TH_CFD.xctest"
+               BlueprintName = "TH_CFDTests"
+               ReferencedContainer = "container:TH_CFD.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -57,48 +57,51 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "EatProject.app"
-            BlueprintName = "EatProject"
-            ReferencedContainer = "container:EatProject.xcodeproj">
+            BuildableName = "TH_CFD.app"
+            BlueprintName = "TH_CFD"
+            ReferencedContainer = "container:TH_CFD.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
+      <AdditionalOptions>
+      </AdditionalOptions>
    </TestAction>
    <LaunchAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Debug"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
+      debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "EatProject.app"
-            BlueprintName = "EatProject"
-            ReferencedContainer = "container:EatProject.xcodeproj">
+            BuildableName = "TH_CFD.app"
+            BlueprintName = "TH_CFD"
+            ReferencedContainer = "container:TH_CFD.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
+      buildConfiguration = "Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "EatProject.app"
-            BlueprintName = "EatProject"
-            ReferencedContainer = "container:EatProject.xcodeproj">
+            BuildableName = "TH_CFD.app"
+            BlueprintName = "TH_CFD"
+            ReferencedContainer = "container:TH_CFD.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
