--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-native-signalr": "0.0.6",
     "react-native-swiper": "^1.4.3",
     "react-native-wx": "^1.0.7",
-    "react-timer-mixin": "^0.13.3"
+    "react-timer-mixin": "^0.13.3",
+    "react-native-tabbar": "0.3.5"
   }
 }
