--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
         </activity>
 
         <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+
+        <activity android:name=".NativeViewActivity"/>
     </application>
 
 </manifest>
