--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -142,9 +142,9 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'asia.ivity.android:drag-sort-listview:1.0'
 
     compile project(':react-native-wx')
-    compile project(':drag-sort-listview')
 
     compile 'com.facebook.react:react-native:+'
 }
