Google App Indexing API.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -147,4 +147,5 @@ dependencies {
     compile project(':react-native-wx')
 
     compile 'com.facebook.react:react-native:+'
+    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
 }
