Linear chart code. Linear Gradient draw in RN.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -150,6 +150,7 @@ dependencies {
 
     compile project(':react-native-wx')
     compile project(':MPChartLib')
+    compile project(':react-native-linear-gradient')
 
     compile 'com.facebook.react:react-native:+'
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
