--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -3,6 +3,8 @@ rootProject.name = 'TH_CFD'
 include ':app'
 include ':react-native-wx'
 include ':MPChartLib'
+include ':react-native-linear-gradient'
 
 project(':react-native-wx').projectDir = new File(settingsDir, '../node_modules/react-native-wx/android')
 project(':MPChartLib').projectDir = new File(settingsDir, './MPChartLib')
+project(':react-native-linear-gradient').projectDir = new File(settingsDir, '../node_modules/react-native-linear-gradient/android')
