--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -4,7 +4,9 @@ include ':app'
 include ':react-native-wx'
 include ':MPChartLib'
 include ':react-native-linear-gradient'
+include ':WheelPicker'
 
 project(':react-native-wx').projectDir = new File(settingsDir, '../node_modules/react-native-wx/android')
 project(':MPChartLib').projectDir = new File(settingsDir, './MPChartLib')
+project(':WheelPicker').projectDir = new File(settingsDir, './WheelPicker')
 project(':react-native-linear-gradient').projectDir = new File(settingsDir, '../node_modules/react-native-linear-gradient/android')
