--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-native-linear-gradient": "^1.5.2",
     "react-native-swiper": "^1.4.3",
     "react-native-tabbar": "0.3.5",
+    "react-native-wheel-picker": "^0.9.2",
     "react-native-wx": "^1.0.7",
     "react-timer-mixin": "^0.13.3"
   }
