--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -85,7 +85,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.tradehero.th"
+        applicationId "com.tradehero.cfd"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 2
