update wechat appid

--- a/ios/TH_CFD/Info.plist
+++ b/ios/TH_CFD/Info.plist
@@ -27,7 +27,7 @@
 			<string>weixin</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>wxe795a0ba8fa23cf7</string>
+				<string>wxe102be8f66949cd1</string>
 			</array>
 		</dict>
 	</array>
