--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "react-native start"
   },
   "dependencies": {
-    "react-native": "^0.21.0",
+    "react": "^0.14.5",
+    "react-native": "^0.24.0",
     "react-native-linear-gradient": "^1.5.2",
     "react-native-swiper": "^1.4.3",
     "react-native-tabbar": "0.3.5",
