--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -147,12 +147,10 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'asia.ivity.android:drag-sort-listview:1.0'
-
     compile project(':react-native-wx')
     compile project(':MPChartLib')
     compile project(':react-native-linear-gradient')
     compile project(':react-native-wheel-picker')
-
-    compile 'com.facebook.react:react-native:+'
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
+    compile project(':ReactAndroid')
 }
