--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,11 +1,13 @@
 rootProject.name = 'TH_CFD'
 
+include ':ReactAndroid'
 include ':app'
 include ':react-native-wx'
 include ':MPChartLib'
 include ':react-native-linear-gradient'
 include ':react-native-wheel-picker'
 
+project(':ReactAndroid').projectDir = new File('/Users/trdehero/react-native-folk/ReactAndroid')
 project(':react-native-wx').projectDir = new File(settingsDir, '../node_modules/react-native-wx/android')
 project(':MPChartLib').projectDir = new File(settingsDir, './MPChartLib')
 project(':react-native-wheel-picker').projectDir = new File(settingsDir, '../node_modules/react-native-wheel-picker/android')
