--- a/ios/TH_CFD/Info.plist
+++ b/ios/TH_CFD/Info.plist
@@ -47,7 +47,7 @@
 	<string></string>
 	<key>UIAppFonts</key>
 	<array>
-		<string>icomoon.ttf</string>
+		<string>myhero.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
