--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-native-linear-gradient": "^1.5.2",
     "react-native-swiper": "^1.4.3",
     "react-native-tabbar": "0.3.5",
+    "react-native-viewpager": "^0.2.1",
     "react-native-wheel-picker": "^0.9.4",
     "react-native-wx": "^1.0.7",
     "react-timer-mixin": "^0.13.3"
