--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-viewpager": "^0.2.1",
     "react-native-wheel-picker": "^0.9.4",
     "react-native-wx": "^1.0.7",
-    "react-timer-mixin": "^0.13.3"
+    "react-timer-mixin": "^0.13.3",
+    "realm": "^0.11.1"
   }
 }
