--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "react": "^0.14.8",
     "react-native": "^0.25.1",
     "react-native-linear-gradient": "^1.5.2",
-    "react-native-swiper": "^1.4.3",
-    "react-native-tabbar": "0.3.5",
+    "react-native-swiper": "^1.4.5",
+    "react-native-tabbar": "^0.3.6",
     "react-native-update": "^1.0.5",
     "react-native-viewpager": "^0.2.1",
     "react-native-wheel-picker": "^0.9.5",
