Save banner locally.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -154,6 +154,7 @@ dependencies {
     compile project(':MPChartLib')
     compile project(':react-native-linear-gradient')
     compile project(':react-native-wheel-picker')
+    compile project(':react-native-fs')
 
     compile 'com.facebook.react:react-native:+'
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
