--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -7,6 +7,8 @@ include ':react-native-linear-gradient'
 include ':react-native-wheel-picker'
 include ':realm'
 include ':react-native-update'
+include ':react-native-fs'
+
 
 project(':react-native-wx').projectDir = new File(settingsDir, '../node_modules/react-native-wx/android')
 project(':MPChartLib').projectDir = new File(settingsDir, './MPChartLib')
@@ -14,3 +16,4 @@ project(':react-native-wheel-picker').projectDir = new File(settingsDir, '../nod
 project(':react-native-linear-gradient').projectDir = new File(settingsDir, '../node_modules/react-native-linear-gradient/android')
 project(':realm').projectDir = new File(rootProject.projectDir, '../node_modules/realm/android')
 project(':react-native-update').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-update/android')
+project(':react-native-fs').projectDir = new File(settingsDir, '../node_modules/react-native-fs/android')
