--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -89,13 +89,14 @@ android {
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 3
-        versionName "1.0"
+        versionName "0.1"
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
         manifestPlaceholders = [
                 // 如果有多项，每一项之间需要用逗号分隔
-                WX_APPID: "wxe102be8f66949cd1"      //在此修改微信APPID
+                WX_APPID: "wxe102be8f66949cd1",      //在此修改微信APPID
+                version_name: "0.1"
         ]
     }
     splits {
@@ -159,5 +160,6 @@ dependencies {
     compile 'com.facebook.react:react-native:+'
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
     compile 'com.tencent.bugly:crashreport:latest.release'
+    compile 'com.tencent.bugly:nativecrashreport:latest.release'
 
 }
