--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^0.14.8",
     "react-native": "^0.25.1",
     "react-native-fs": "^1.5.0",
+    "react-native-image-picker": "^0.19.5",
     "react-native-linear-gradient": "^1.5.9",
     "react-native-swiper": "^1.4.5",
     "react-native-tabbar": "^0.3.6",
