support deep link on iOS; cfd://page/1

--- a/ios/TH_CFD/Info.plist
+++ b/ios/TH_CFD/Info.plist
@@ -22,6 +22,14 @@
 	<array>
 		<dict>
 			<key>CFBundleURLName</key>
+			<string>com.typhoon.technology.cfd</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>cfd</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleURLName</key>
 			<string>weixin</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
