--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-native-linear-gradient": "^1.5.12",
     "react-native-swiper": "^1.4.5",
     "react-native-tabbar": "^0.3.6",
-    "react-native-update": "^1.0.7",
+    "react-native-update": "1.0.7",
     "react-native-viewpager": "^0.2.1",
     "react-native-viewpager-es6": "^0.2.3",
     "react-native-wheel-picker": "^1.0.0",
