--- a/android/app/react.gradle
+++ b/android/app/react.gradle
@@ -75,7 +75,7 @@ gradle.projectsEvaluated {
                     commandLine "cmd", "/c", "react-native", "bundle", "--platform", "android", "--dev", "${devEnabled}",
                             "--entry-file", entryFile, "--bundle-output", jsBundleFile, "--assets-dest", resourcesDir
                 } else {
-                    commandLine "/Users/windy/.nvm/versions/node/v6.2.2/bin/react-native", "bundle", "--platform", "android", "--dev", "${devEnabled}",
+                    commandLine "/usr/local/bin/react-native", "bundle", "--platform", "android", "--dev", "${devEnabled}",
                             "--entry-file", entryFile, "--bundle-output", jsBundleFile, "--assets-dest", resourcesDir
                 }
 
