--- a/ios/TH_CFD/Info.plist
+++ b/ios/TH_CFD/Info.plist
@@ -65,6 +65,11 @@
 	<array>
 		<string>myhero.ttf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
