--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -98,7 +98,11 @@ android {
                 WX_APPID: "wxe102be8f66949cd1",      //在此修改微信APPID
                 VERSION_NAME: versionName,
                 TD_APP_ID: "9E5885AAFCB333653031970C2AF5614E",
-                TD_CHANNEL_ID: "default"
+                TD_CHANNEL_ID: "default",
+                GETUI_APP_ID : "v28qIAj6TO6ykm4QYEQFU",
+                GETUI_APP_KEY : "wY0MaVLXBjAneFnLwmBUDA",
+                GETUI_APP_SECRET : "UPfURaOnLI6K0vP6PC0ie5",
+                PACKAGE_NAME : "com.tradehero.cfd"
         ]
     }
     splits {
@@ -171,5 +175,10 @@ dependencies {
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.squareup.okhttp3:okhttp:3.3.1'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+
+    // -------------------- 个推依赖 ------------
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.getui:sdk:2.9.0.0'
+    compile 'com.android.support:support-v4:+'
 
 }
