--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,5 +21,9 @@ allprojects {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$projectDir/../../node_modules/react-native/android"
         }
+
+        maven {
+            url "http://mvn.gt.igexin.com/nexus/content/repositories/releases/"
+        }
     }
 }
