--- a/package.json
+++ b/package.json
@@ -6,20 +6,20 @@
     "start": "react-native start"
   },
   "dependencies": {
-    "react": "0.14.8",
-    "react-native": "0.25.1",
+    "babylon": "6.8.4",
+    "react": "15.3.1",
+    "react-native": "^0.33.0",
     "react-native-fs": "1.5.0",
-    "react-native-image-picker": "0.19.5",
+    "react-native-image-picker": "0.22.7",
     "react-native-linear-gradient": "1.5.12",
     "react-native-swiper": "1.4.8",
     "react-native-tabbar": "0.3.6",
-    "react-native-update": "1.0.7",
+    "react-native-update": "3.0.1",
     "react-native-viewpager": "0.2.1",
     "react-native-viewpager-es6": "0.2.3",
-    "react-native-wheel-picker": "1.0.1",
+    "react-native-wheel-picker": "1.1.0",
     "react-native-wx": "1.0.9",
     "react-timer-mixin": "0.13.3",
-    "realm": "0.11.1",
-    "react-native-webview-bridge": "0.20.3"
+    "realm": "0.11.1"
   }
 }
