--- a/android/build.gradle
+++ b/android/build.gradle
@@ -19,9 +19,8 @@ allprojects {
         jcenter()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
-            url "$projectDir/../../node_modules/react-native/android"
+            url "$rootDir/../node_modules/react-native/android"
         }
-
         maven {
             url "http://mvn.gt.igexin.com/nexus/content/repositories/releases/"
         }
