--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -183,6 +183,7 @@ dependencies {
     compile project(':react-native-linear-gradient')
     compile project(':react-native-wheel-picker')
     compile project(':react-native-fs')
+    compile project(':react-native-smart-swipe-refresh-layout')
 
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
     compile 'com.tencent.bugly:crashreport:latest.release'
