--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-wheel-picker": "1.1.0",
     "react-native-wx": "1.0.9",
     "react-timer-mixin": "0.13.3",
-    "realm": "0.14.3"
+    "realm": "0.14.3",
+    "react-native-smart-pull-to-refresh-listview": "1.0.17"
   }
 }
