--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -105,15 +105,16 @@ android {
             abiFilters "armeabi-v7a", "x86"
         }
         manifestPlaceholders = [
-                // 如果有多项，每一项之间需要用逗号分隔
-                WX_APPID: "wxe102be8f66949cd1",      //在此修改微信APPID
-                VERSION_NAME: versionName,
-                TD_APP_ID: "9E5885AAFCB333653031970C2AF5614E",
-                TD_CHANNEL_ID: "default",
-                GETUI_APP_ID : "v28qIAj6TO6ykm4QYEQFU",
-                GETUI_APP_KEY : "wY0MaVLXBjAneFnLwmBUDA",
-                GETUI_APP_SECRET : "UPfURaOnLI6K0vP6PC0ie5",
-                PACKAGE_NAME : "com.tradehero.cfd"
+            // 如果有多项，每一项之间需要用逗号分隔
+            WX_APPID: "wxe102be8f66949cd1",      //在此修改微信APPID
+            VERSION_NAME: versionName,
+            TD_APP_ID: "9E5885AAFCB333653031970C2AF5614E",
+            TD_CHANNEL_ID: "default",
+            GETUI_APP_ID : "v28qIAj6TO6ykm4QYEQFU",
+            GETUI_APP_KEY : "wY0MaVLXBjAneFnLwmBUDA",
+            GETUI_APP_SECRET : "UPfURaOnLI6K0vP6PC0ie5",
+            TONGDAO_APP_KEY : "126b767625e6d0df67333fb01749143f",
+            PACKAGE_NAME : "com.tradehero.cfd"
         ]
     }
     splits {
@@ -199,6 +200,9 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.getui:sdk:2.9.0.0'
     compile 'com.android.support:support-v4:+'
+
+    // -------------------- 同道依赖 ------------
+    compile project(':sdk-ui')
 }
 
 // Run this once to be able to run the application with BUCK
