--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.READ_LOGS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <uses-feature android:name="android.hardware.camera" android:required="false"/>
     <uses-feature android:name="android.hardware.camera.autofocus" android:required="false"/>
@@ -126,6 +127,9 @@
         <meta-data
             android:name="TD_CHANNEL_ID"
             android:value="${TD_CHANNEL_ID}" />
+        <meta-data
+            android:name="TONGDAO_APP_KEY"
+            android:value="${TONGDAO_APP_KEY}" />
     </application>
 
 </manifest>
