--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "react-native-fs": "1.5.0",
     "react-native-image-picker": "0.22.7",
     "react-native-linear-gradient": "1.5.12",
+    "react-native-smart-pull-to-refresh-listview": "1.0.17",
     "react-native-swiper": "1.5.2",
     "react-native-tabbar": "0.3.6",
     "react-native-update": "3.0.1",
     "react-native-wheel-picker": "1.1.0",
     "react-native-wx": "1.0.9",
     "react-timer-mixin": "0.13.3",
-    "realm": "0.14.3",
-    "react-native-smart-pull-to-refresh-listview": "1.0.17"
+    "realm": "0.14.3"
   }
 }
