--- a/ios/TH_CFD/Info.plist
+++ b/ios/TH_CFD/Info.plist
@@ -38,7 +38,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>5</string>
+	<string>7</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>weixin</string>
@@ -59,10 +59,18 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>是否打开蓝牙？</string>
+	<key>NSCameraUsageDescription</key>
+	<string>是否打开相机？</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>YES</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>YES</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>是否打开话筒？</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>是否打开相册？</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>myhero.ttf</string>
