--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-wheel-picker": "1.1.0",
     "react-native-wx": "1.0.9",
     "react-timer-mixin": "0.13.3",
-    "realm": "0.14.3"
+    "realm": "0.14.3",
+    "react-native-datepicker": "1.3.2"
   }
 }
