--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -10,6 +10,7 @@ include ':react-native-update'
 include ':react-native-fs'
 include ':react-native-image-picker'
 include ':react-native-smart-swipe-refresh-layout'
+include ':react-native-picker'
 
 project(':react-native-wx').projectDir = new File(settingsDir, '../node_modules/react-native-wx/android')
 project(':MPChartLib').projectDir = new File(settingsDir, './MPChartLib')
@@ -20,3 +21,4 @@ project(':react-native-update').projectDir = new File(rootProject.projectDir, '.
 project(':react-native-fs').projectDir = new File(settingsDir, '../node_modules/react-native-fs/android')
 project(':react-native-image-picker').projectDir = new File(settingsDir, '../node_modules/react-native-image-picker/android')
 project(':react-native-smart-swipe-refresh-layout').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-smart-pull-to-refresh-listview/android')
+project(':react-native-picker').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-picker/android')
