--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-native-swiper": "1.5.2",
     "react-native-tabbar": "0.3.6",
     "react-native-update": "3.0.1",
-    "react-native-wheel-picker": "1.1.0",
+    "react-native-picker": "4.0.8",
     "react-native-wx": "^2.0.1",
     "react-timer-mixin": "0.13.3",
     "realm": "0.14.3",
