--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -170,6 +170,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-cookies')
     compile 'com.facebook.react:react-native:+'
     compile project(':react-native-image-picker')
     compile project(':react-native-update')
