--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "babylon": "6.8.4",
     "react": "15.3.1",
     "react-native": "^0.33.0",
+    "react-native-cookies": "^2.0.0",
+    "react-native-datepicker": "1.3.2",
     "react-native-fs": "1.5.0",
     "react-native-image-picker": "0.22.7",
     "react-native-linear-gradient": "1.5.12",
+    "react-native-picker": "4.0.8",
     "react-native-smart-pull-to-refresh-listview": "1.0.17",
     "react-native-swiper": "1.5.2",
     "react-native-tabbar": "0.3.6",
     "react-native-update": "3.0.1",
-    "react-native-picker": "4.0.8",
     "react-native-wx": "^2.0.1",
     "react-timer-mixin": "0.13.3",
-    "realm": "0.14.3",
-    "react-native-datepicker": "1.3.2"
+    "realm": "0.14.3"
   }
 }
