--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-native-image-picker": "0.22.7",
     "react-native-linear-gradient": "1.5.12",
     "react-native-picker": "4.0.8",
-    "react-native-smart-pull-to-refresh-listview": "1.0.17",
+    "react-native-smart-pull-to-refresh-listview": "^1.0.17",
     "react-native-swiper": "1.5.2",
     "react-native-tabbar": "0.3.6",
     "react-native-update": "3.0.1",
