--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "react-native-wheel-picker": "1.1.0",
     "react-native-wx": "^2.0.1",
     "react-timer-mixin": "0.13.3",
-    "realm": "0.14.3"
+    "realm": "^0.14.3"
   }
 }
