--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -12,6 +12,8 @@ include ':react-native-image-picker'
 include ':react-native-smart-swipe-refresh-layout'
 include ':react-native-picker'
 include ':react-native-cookies'
+include ':react-native-view-shot'
+include ':react-native-qrcode-local-image'
 
 project(':react-native-wx').projectDir = new File(settingsDir, '../node_modules/react-native-wx/android')
 project(':MPChartLib').projectDir = new File(settingsDir, './MPChartLib')
@@ -24,3 +26,5 @@ project(':react-native-image-picker').projectDir = new File(settingsDir, '../nod
 project(':react-native-smart-swipe-refresh-layout').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-smart-pull-to-refresh-listview/android')
 project(':react-native-picker').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-picker/android')
 project(':react-native-cookies').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-cookies/android')
+project(':react-native-view-shot').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-view-shot/android')
+project(':react-native-qrcode-local-image').projectDir = new File(settingsDir, '../node_modules/@remobile/react-native-qrcode-local-image/android')
