add for react-native-orientation

--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,6 +1,8 @@
 rootProject.name = 'TH_CFD'
 
 include ':app'
+include ':react-native-orientation'
+project(':react-native-orientation').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-orientation/android')
 include ':react-native-wx'
 include ':MPChartLib'
 include ':react-native-linear-gradient'
@@ -14,6 +16,7 @@ include ':react-native-picker'
 include ':react-native-cookies'
 include ':react-native-view-shot'
 include ':react-native-qrcode-local-image'
+include ':react-native-orientation'
 
 project(':react-native-wx').projectDir = new File(settingsDir, '../node_modules/react-native-wx/android')
 project(':MPChartLib').projectDir = new File(settingsDir, './MPChartLib')
@@ -28,3 +31,4 @@ project(':react-native-picker').projectDir = new File(rootProject.projectDir, '.
 project(':react-native-cookies').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-cookies/android')
 project(':react-native-view-shot').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-view-shot/android')
 project(':react-native-qrcode-local-image').projectDir = new File(settingsDir, '../node_modules/@remobile/react-native-qrcode-local-image/android')
+project(':react-native-orientation').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-orientation/android')
