--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -170,6 +170,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-orientation')
     compile project(':react-native-cookies')
     compile project(':react-native-picker')
     compile 'com.facebook.react:react-native:+'
@@ -217,6 +218,9 @@ dependencies {
     // -------------------- 截屏 + QR码识别 ------------
     compile project(':react-native-view-shot')
     compile project(':react-native-qrcode-local-image')
+
+    // -------------------- 横竖屏幕 ------------
+    compile project(':react-native-orientation')
 }
 
 // Run this once to be able to run the application with BUCK
