--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,6 +22,9 @@ allprojects {
             url "$rootDir/../node_modules/react-native/android"
         }
         maven {
+            url "https://jitpack.io"
+        }
+        maven {
             url "http://mvn.gt.igexin.com/nexus/content/repositories/releases/"
         }
     }
